[new] logcat.html page. A experimental page with websocket to show some information through the logcat.

--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Port:"
+            android:text="Server Port"
             android:id="@+id/textView2"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
@@ -36,6 +36,20 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/txtPort" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Web Socket Port (logcat)"
+            android:id="@+id/textView3"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/txtWSPort" />
 
         <Button
             style="android:attr/buttonStyleSmall"
