--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -450,7 +450,7 @@ a:hover {
 header {
   padding-top: 40px;
   padding-bottom: 40px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
@@ -473,7 +473,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #ffffff;
   letter-spacing: 0;
 }
 
@@ -521,7 +521,7 @@ a.button {
   height: 58px;
   padding-top: 22px;
   padding-left: 68px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 23px;
   line-height: 1.2;
   color: #fff;
@@ -614,7 +614,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 2.8em;
   font-weight: normal;
   color: #474747;
@@ -631,7 +631,7 @@ form {
 
 #main-content h2 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 22px;
   font-weight: bold;
   color: #474747;
@@ -647,7 +647,7 @@ form {
 #main-content h3 {
   margin-top: 24px;
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 18px;
   font-weight: bold;
   color: #474747;
@@ -663,7 +663,7 @@ form {
 
 #main-content h4 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   color: #474747;
@@ -679,7 +679,7 @@ h4:before {
 
 #main-content h5 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: 14px;
   color: #474747;
   text-indent: 3px;
@@ -693,7 +693,7 @@ h5:before {
 
 #main-content h6 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial;
   font-size: .8em;
   color: #474747;
   text-indent: 3px;
