add glyphicons css

--- a/app/src/main/assets/HTMLFiles/css/style.css
+++ b/app/src/main/assets/HTMLFiles/css/style.css
@@ -1,4 +1,5 @@
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css";
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css");
 
 .badge-success {
   background-color: #468847;
