--- a/app/src/main/assets/HTMLFiles/css/style.css
+++ b/app/src/main/assets/HTMLFiles/css/style.css
@@ -180,7 +180,7 @@ html {
   background-color: #375a7f;
   color: #ffffff;
 }
-.sidebar-nav li:nth-child(1):before {
+.sidebar-nav li:nth-child(1):before { /*------------FIRTS-------------------*/
   background-color: #375a7f;
 }
 .sidebar-nav li:nth-child(2):before {
@@ -200,7 +200,7 @@ html {
   background-color: #375a7f;
 }
 .sidebar-nav li:nth-child(7){
- padding-top: 200px;
+ padding-top: 100px;
  background-color: #375a7f;
 }
 
